2003-06-26  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSColorWellInspector.gorm: Redid the
	inspector for this..
	* Palettes/2Controls/inspectors.m: Implemented GormColorWellInspector
	to allow the modification of color wells in Gorm.
	* GormFontViewController.m: Added stubbed versions of the methods
	mouseDragged and flagsChanged.

2003-06-25  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSProgressIndicatorInspector.gorm: Added
	* Palettes/2Controls/inspector.m: Added 
	GormProgressIndicatorInspector class to handle inspection of
	NSProgressIndicator.  
	* Palettes/2Controls/Makefile: added line to copy the .gorm file.

2003-06-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: parseHeader added logic to prevent the
	addition of outlets/actions with illegal characters when
	importing from a header.  This also prevents a problem
	where comments were being imported into the class as
	outlets.
	
2003-06-19  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Moved declaration of GSNibItem in instantiateClass:
	to the top of the method so that it will compile on gcc < 3.0.   
	Problem found and patch submitted by Andreas Heppel.  Thanks!

2003-06-09  Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Added mention of GormFontViewController.[hm]
	to the makefile.
	* Gorm.m: added header and updated orderFrontFontPanel: to 
	install the view when the font panel is instantiated.
	* GormScrollViewEditor.m: Minor code cleanup.
	* GormFontViewController.[hm]: Added.
	
2003-06-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormScrollViewEditor.m: Added -[destroyAndListSubviews]
	method to allow views within a NSScrollView to be ungrouped.
	* GormViewWithContentViewEditor.m: Added GormScrollViewEditor
	to list of classes to test for so that the ungroup method will
	proceed.
	Addresses bug #3536.
	